--- a/stylesheets/sass/modules/_header.sass
+++ b/stylesheets/sass/modules/_header.sass
@@ -2,10 +2,5 @@
 
 header
     background-color: $red
-    opacity: 0.95
-    filter: alpha(opacity=95)
-    z-index: 2
-    position: fixed
-    top: 0em
     width: 100%
     overflow: hidden
